--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,8 @@
   ],
   "plugins":
   [
-    "react"
+    "react",
+    "@typescript-eslint"
   ],
   "parser": "babel-eslint",
   "env": 
@@ -19,17 +20,21 @@
     "react/jsx-uses-vars": "error",
     //see https://github.com/typescript-eslint/typescript-eslint/blob/master/docs/getting-started/linting/FAQ.md#i-get-errors-from-the-no-undef-rule-about-global-variables-not-being-defined-even-though-there-are-no-typescript-errors
     "no-undef": "off",
-    "brace-style": [
+    "brace-style": "off",
+    "@typescript-eslint/brace-style":
+    [
       "error",
       "allman",
       { "allowSingleLine": true }
     ],
-    "valid-jsdoc": [
+    "valid-jsdoc": 
+    [
       "error",
       { 
         "requireReturnType": false,
         "requireParamType": false 
       }
-    ]
+    ],
+    "padded-blocks": "off"
   }
 }
