--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "author": "Adrian Kriegel",
   "license": "MIT",
   "dependencies": {
-    "@types/react": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
@@ -28,15 +26,17 @@
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.13",
     "@babel/runtime": "^7.12.5",
+    "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-loader": "^4.0.2",
     "eslint-plugin-react": "^7.22.0",
+    "eslint-webpack-plugin": "^2.5.0",
     "html-webpack-plugin": "^5.0.0-beta.6",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
