--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,11 @@
   {
     "browser": true
   },
+  "globals":
+  {
+    "process": "readonly",
+    "JSX": "readonly"
+  },
   "rules": 
   {   
     "react/jsx-uses-react": "error",   
