changed eslint parser to typescript

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "react",
     "@typescript-eslint"
   ],
-  "parser": "babel-eslint",
+  "parser": "@typescript-eslint/parser",
   "env": 
   {
     "browser": true
