--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack serve --mode development",
     "build": "tsc && webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "check-typescript": "tsc"
+    "check-typescript": "tsc",
+    "lint": "eslint --ext .ts,.tsx ./src"
   },
   "author": "Adrian Kriegel",
   "license": "MIT",
@@ -29,6 +30,7 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
