--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
