--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,16 +5,15 @@
     "target": "esnext",
     // Search under node_modules for non-relative imports.
     "moduleResolution": "node",
-    // Process & infer types from .js files.
-    "allowJs": true,
-    // Don't emit; allow Babel to transform files.
-    "noEmit": true,
+    "allowJs": false,
     // Enable strictest settings like strictNullChecks & noImplicitAny.
     "strict": true,
     // Disallow features that require cross-file information for emit.
     "isolatedModules": true,
     // Import non-ES modules as default imports.
     "esModuleInterop": true,
+    "declaration": true,
+    "outDir": "./dist",
     "jsx": "react-jsx"
   },
   "include": 
