--- a/package.json
+++ b/package.json
@@ -8,14 +8,11 @@
     "build": "tsc && webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
     "check-typescript": "tsc",
-    "lint": "eslint --ext .ts,.tsx ./src"
+    "lint": "eslint --ext .ts,.tsx ./src",
+    "lint-fix": "eslint --fix --ext .ts,.tsx ./src"
   },
   "author": "Adrian Kriegel",
   "license": "MIT",
-  "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
-  },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
@@ -48,5 +45,9 @@
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   }
 }
