--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,11 @@
 {
   "extends": 
   [ 
-    "eslint:recommended",
-    "google"
+    "@unologin/eslint-config"
   ],
   "plugins":
   [
-    "react",
-    "@typescript-eslint"
+    "react"
   ],
   "parser": "@typescript-eslint/parser",
   "env": 
@@ -18,40 +16,5 @@
   {
     "process": "readonly",
     "JSX": "readonly"
-  },
-  "rules": 
-  {   
-    "no-trailing-spaces": "off",
-    "react/jsx-uses-react": "error",   
-    "react/jsx-uses-vars": "error",
-    "object-curly-spacing": "off",
-    "brace-style": "off",
-    "@typescript-eslint/brace-style":
-    [
-      "error",
-      "allman",
-      { "allowSingleLine": true }
-    ],
-    "valid-jsdoc": 
-    [
-      "error",
-      { 
-        "requireReturnType": false,
-        "requireParamType": false 
-      }
-    ],
-    "padded-blocks": "off",
-    "indent":
-    [
-      "error",
-      2,
-      {
-        "FunctionDeclaration":
-        {
-          "body": 1
-        }
-      }
-    ],
-    "block-spacing": [ "error", "always" ]
   }
 }
