--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.0",
     "@typescript-eslint/parser": "^4.15.2",
+    "@unologin/eslint-config": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.19.0",
-    "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-webpack-plugin": "^2.5.0",
     "html-webpack-plugin": "^5.0.0-beta.6",
@@ -43,7 +43,7 @@
     "ts-loader": "^8.0.17",
     "typescript": "^4.1.5",
     "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
