--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.13",
+    "@babel/register": "^7.13.8",
     "@babel/runtime": "^7.12.5",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
@@ -41,6 +42,7 @@
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.5.0",
