--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/runtime": "^7.12.5",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
+    "@types/webpack-dev-server": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@unologin/eslint-config": "^1.0.2",
     "babel-eslint": "^10.1.0",
@@ -44,8 +45,8 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.5",
     "webpack": "^5.18.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   },
   "dependencies": {
     "react": "^17.0.1",
