--- a/.eslintrc
+++ b/.eslintrc
@@ -5,12 +5,14 @@
   ],
   "plugins":
   [
-    "react"
+    "react",
+    "jest"
   ],
   "parser": "@typescript-eslint/parser",
   "env": 
   {
-    "browser": true
+    "browser": true,
+    "jest": true
   },
   "globals":
   {
