--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "webpack serve --mode development",
     "build": "tsc && webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "check-typescript": "tsc",
     "lint": "eslint --ext .ts,.tsx ./src",
     "lint-fix": "eslint --fix --ext .ts,.tsx ./src"
@@ -25,6 +25,8 @@
     "@babel/preset-typescript": "^7.12.13",
     "@babel/register": "^7.13.8",
     "@babel/runtime": "^7.12.5",
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.2",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/webpack-dev-server": "^4.3.1",
@@ -35,9 +37,11 @@
     "css-loader": "^5.0.1",
     "dotenv": "^8.2.0",
     "eslint": "^7.31.0",
+    "eslint-plugin-jest": "^25.2.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-webpack-plugin": "^2.5.0",
     "html-webpack-plugin": "^5.0.0-beta.6",
+    "jest": "^27.2.5",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "style-loader": "^2.0.0",
